@@ -1,5 +1,6 @@
 Version 2.02.169 - 
 =====================================
+  Fix displayed lv name when splitting snapshot (2.02.146).
   Warn about command not making metadata backup just once per command.
   Enable usage of cached volume as thin volume's external origin.
   Support cache volume activation with -real layer.
